--- a/week01/file-paths.html
+++ b/week01/file-paths.html
@@ -18,7 +18,7 @@
     <img src="../images/salt-lake-temple.jpg" alt="The Salt Lake Temple">
 
     <p>A temple image file with an absolute path:</p>
-    <img src="https://content.churchfjesuschrist.org/templesldsorg/bc/Temples/foto-galleries/anchorage-alaska/320x180/anchorage-temple-lds-253274-wallpaper.jpg"
+    <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/foto-galleries/anchorage-alaska/320x180/anchorage-temple-lds-253274-wallpaper.jpg"
         alt="The Anchorage Alaska Temple">
 
 </body>
