--- a/index.html
+++ b/index.html
@@ -3,12 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Marcelo Candido da Silva| WDD 130</title>
 </head>
 <body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
+    <header>
+        <nav>
+            <a href = "#">Home</a>
+            <a href = "wwr/">Rafting Website</a>
+        </nav>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
-</body>
+    </header>
+    <main>
+        <h1>Marcelo Candido da Silva | WDD 130.</h1>
+        <img src="images/Marcelo.jpg" alt="Hello, my name is marcelo Candido da Silva" width="200" >
+        <p>Hello!. My name is Marcelo and I am from Brazil. I am currently studyind software development in BYU.</p>
+        <p>I like climbing, running and all kind of radical sports</p>
+    </main>
+    <footer>
+        <p>&copy 2025 ⚜ Marcelo Candido ⚜ Rio de Janeiro, Brazil</p>
+    </footer>
+    
+    </body>
 </html>
