--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     </header>
     <main>
         <h1>Marcelo Candido da Silva | WDD 130.</h1>
-        <img src="images/Marcelo.jpg" alt="Hello, my name is marcelo Candido da Silva" width="200" >
+        <img src="images/profile.jpg" alt="Hello, my name is marcelo Candido da Silva" width="200" >
         <p>Hello!. My name is Marcelo and I am from Brazil. I am currently studyind software development in BYU.</p>
         <p>I like climbing, running and all kind of radical sports</p>
     </main>
     <footer>
-        <p>&copy 2025 ⚜ Marcelo Candido ⚜ Rio de Janeiro, Brazil</p>
+        <p>&copy 2025 ⚜ Marcelo Candido da Silva ⚜ Rio de Janeiro, Brazil</p>
     </footer>
     
     </body>
