--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p>I like climbing, running and all kind of radical sports</p>
     </main>
     <footer>
-        <p>&copy; 2025 ⚜ Marcelo Candido da Silva ⚜ Rio de Janeiro, Brazil</p>
+        <p>© 2025 ⚜ Marcelo Candido da Silva ⚜ Rio de Janeiro, Brazil</p>
     </footer>
     
     </body>
