--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -3,9 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>placeholder</title>
+    <title>Basic HTML structure</title>
+    <meta name="description" content="A basic HTML5 structure example using semantic HTML elements .">
+    <meta name="author" content="Marcelo Candido da Silva">
 </head>
 <body>
-    
+    <header>
+        <img src="images/basic-logo.png" alt="WDD130 Logo" width = "128" height = "128" >
+
+    </header>
+    <nav>
+        <ul>
+            <li><a href="www.youtube.com.br">You Tube</a></li>
+            <li><a href="www.google.com.br">google</a></li>
+            
+        </ul>
+    </nav>
+    <main>
+        <h1>Basic HTML Structure</h1>
+
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt, esse.</p>    
+        </section>
+
+    <aside>
+        <img src =https://www.churchofjesuschrist.org/temples/photo-gallery?lang=eng alt="temple" width = "200">
+
+    </aside>
+    <footer>
+        <p>Copyright &copy; 2025 Marcelo Candido da Silva</p>
+    </footer>
 </body>
 </html>
