--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -28,7 +28,7 @@
         </section>
 
     <aside>
-        <img src =https://www.churchofjesuschrist.org/temples/photo-gallery?lang=eng alt="temple" width = "200">
+        <img src ="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/accra-ghana/800x450/accra-ghana-temple-detail-249022-2400x1200.jpg" alt="temple" width = "200">
 
     </aside>
     <footer>
